assets/theme.css
/* ... */
.comment + .comment {
  padding-top: var(--g-gutter);
}
.comment .h6 {
  font-weight: 700;
}
.comment .h3 {
  margin-bottom: 30px;
}
.comment .comment__user {
  width: 60px;
  height: 60px;
  background-color: #f1f1f1;
}
.rte--indented-images .rte__image-indent {
  position: relative;
  margin-left: calc(0 - var(--g-gutter));
  margin-right: calc(0 - var(--g-gutter));
}
@media only screen and (min-width: 750px) {
  .rte--indented-images .rte__image-indent {
    margin-left: -40px;
    margin-right: -40px;
  }
}
.is-transitioning {
  display: block !important;
  visibility: visible !important;
}
.page-container {
  /* Clip horizontal overflow: swiper "peek" sections set overflow:visible and
     would otherwise let the whole page scroll sideways. overflow-x:clip clips
     only the x-axis WITHOUT creating a scroll container, so position:sticky and
     vertical overflow stay intact (safer than the old commented overflow:hidden). */
  overflow-x: clip;
  transition: none !important;
}
.js-drawer-open .page-container:after {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 9998;
  background: rgba(0, 0, 0, 0.7);
}
.js-drawer-open {
  overflow: hidden;
}
.drawer {
  display: block;
  opacity: 0;
  visibility: hidden;
  position: fixed;
  overflow-y: auto;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  top: 0;
  bottom: 0;
  max-width: 95%;
  z-index: 9999;
  background-color: #fff;
  transition: all 0.35s cubic-bezier(0.33, 0.59, 0.14, 1);
}
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .drawer {
    z-index: 3;
  }
}
.drawer--left {
  width: 400px;
  left: -400px;
}
@media only screen and (max-width: 749px) {
  .drawer--left {
    width: 350px;
    left: -350px;
  }
}
.js-drawer-open-left .drawer--left {
  display: block;
  -ms-transform: translateX(400px);
  -webkit-transform: translateX(400px);
  transform: translateX(400px);
  opacity: 1;
  visibility: visible;
}
@media only screen and (max-width: 749px) {
  .js-drawer-open-left .drawer--left {
    -ms-transform: translateX(350px);
    -webkit-transform: translateX(350px);
    transform: translateX(350px);
  }
}
.no-csstransforms .js-drawer-open-left .drawer--left {
  left: 0;
}
.rtl .no-csstransforms .js-drawer-open-left .drawer--left {
  right: 0;
  left: auto;
}
.drawer--right {
  width: 350px;
  right: -350px;
}
.rtl .drawer--right {
  left: -350px;
  right: auto;
}
.js-drawer-open-right .drawer--right {
  display: block;
  -ms-transform: translateX(-350px);
  -webkit-transform: translateX(-350px);
  transform: translateX(-350px);
  opacity: 1;
  visibility: visible;
}
.no-csstransforms .js-drawer-open-right .drawer--right {
  right: 0;
}
.rtl .no-csstransforms .js-drawer-open-right .drawer--right {
  left: 0;
  right: auto;
}
.is-moved-by-drawer {
  transition: all 0.35s cubic-bezier(0.33, 0.59, 0.14, 1);
}
.no-csstransforms .js-drawer-open-left .is-moved-by-drawer {
  left: 350px;
}
.rtl .no-csstransforms .js-drawer-open-left .is-moved-by-drawer {
  right: 350px;
  left: auto;
}
.no-csstransforms .js-drawer-open-right .is-moved-by-drawer {
  left: -350px;
}
.rtl .no-csstransforms .js-drawer-open-right .is-moved-by-drawer {
  right: -350px;
  left: auto;
}
.page-element {
  position: relative;
}
/*.overflow-hidden-mobile .page-element {
  z-index: 9999;
}*/
.page-element.is-transitioning {
  z-index: 2;
}
.js-drawer-open-left .page-element.is-transitioning {
  z-index: 101;
}
/*.page-container {
  background-color:  var(--color-body);
}*/
.bg-content{
  background-color:  var(--color-content);
}
.is-moved-by-drawer,
.js-drawer-open .is-moved-by-drawer {
  transition: all 0.35s cubic-bezier(0.33, 0.59, 0.14, 1);
}
.js-drawer-open-left .is-moved-by-drawer {
  box-shadow: #0000001a 0 0 5px;
}
.js-drawer-open-right .is-moved-by-drawer {
  box-shadow: #0000001a 0 0 -5px;
}
.drawer {
  overflow: visible;
  color: #000;
}
.drawer .show {
  opacity: 1 !important;
}
.drawer__inner {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 0 15px;
}
.collection-sort {
  display: inline-block;
  text-align: left;
  max-width: 150px;
}
.rtl .collection-sort {
  text-align: right;
}
.collection-sort + .collection-sort {
  margin-left: 20px;
}
.rtl .collection-sort + .collection-sort {
  margin-right: 20px;
  margin-left: inherit;
}
@media only screen and (max-width: 749px) {
  .collection-sort {
    width: 80%;
  }
  .collection-sort + .collection-sort {
    margin: var(--g-gutter) 0 0;
  }
}
.collection-sort__label {
  display: block;
  text-align: center;
}
@media only screen and (min-width: 750px) {
  .collection-sort__label {
    text-align: left;
    padding-left: 7px;
    margin-bottom: 0;
  }
  .rtl .collection-sort__label {
    text-align: right;
  }
  .rtl .collection-sort__label {
    padding-right: 7px;
    padding-left: inherit;
  }
}
.collection-sort__input {
  background-color: transparent;
  font-weight: 700;
  padding-top: 7px;
  padding-bottom: 7px;
  padding-left: 7px;
}
@media only screen and (max-width: 749px) {
  .collection-sort__input {
    width: 100%;
    border: 1px solid black;
  }
}
.apolloQty {
  color: #999;
}
.sidebar [data-toggle="collapse"] {
  cursor: pointer;
  position: relative;
}
.sidebar [data-toggle="collapse"]:after {
  font-family: icomoon !important;
  position: absolute;
  content: "\e92d";
  width: 30px;
  text-align: center;
  right: -10px;
  top: 0;
  bottom: 0;
  font-size: 10px;
}
.sidebar [aria-expanded="false"]:after {
  content: "\e93d";
}
.collection {
  margin-bottom: 30px;
}
.collection:last-child {
  margin-bottom: 0;
}
#shopbyvendor li,
#shopbytype li,
#categories_block li {
  text-transform: capitalize;
  padding: 8px 0;
}
#shopbyvendor li.active,
#shopbytype li.active,
#categories_block li.active {
  font-weight: 700;
}
#shopbyvendor li.active a,
#shopbytype li.active a,
#categories_block li.active a {
  color: var(--g-main);
}
/* ... */

